# cpp_game

./: CMakeLists.txt  README.txt  cpp_game.sln
cpp_game/: button.cpp  button.h  cpp_game.vcxproj  cpp_game.vcxproj.filters  define.h  event.cpp  event.h  game.cpp  game.h  game_screen.cpp  game_screen.h  help_screen.cpp  help_screen.h  main.cpp  main_menu_screen.cpp  main_menu_screen.h  player.cpp  player.h  screen.cpp  screen.h  screen_manager.cpp  screen_manager.h  select_screen.cpp  select_screen.h
cpp_game/x64/Debug/: cpp_game.exe.recipe  cpp_gamed.exe.recipe  vc143.idb
cpp_game/x64/Debug/cpp_game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cpp_game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
cpp_game/x64/Release/: cpp_game.exe.recipe  cpp_game.iobj  cpp_game.ipdb
cpp_game/x64/Release/cpp_game.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  cpp_game.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
